account and sources as fake links

--- a/fatcat/templates/base.html
+++ b/fatcat/templates/base.html
@@ -37,7 +37,7 @@
           <a class="item" href="#">Open Submissions</a>
           <a class="item" href="#">Edit History</a>
           <div class="divider"></div>
-          <a class="item" href="/account">Account</a>
+          <a class="item" href="#">Account</a>
           <a class="item" href="/logout">Logout</a>
         </div>
       </div>
@@ -56,7 +56,7 @@
     <div class="ui horizontal inverted small divided link list">
       <span class="item">fatcat!</span>
       <a class="item" href="/about">About</a>
-      <a class="item" href="/sources">Sources</a>
+      <a class="item" href="#">Sources</a>
       <a class="item" href="#">Status</a>
       <a class="item" href="#">Datasets</a>
       <a class="item" href="https://git.bnewbold.net/fatcat/">Source Code</a>
