--- a/fatcat/templates/base.html
+++ b/fatcat/templates/base.html
@@ -34,10 +34,10 @@
       <div class="ui simple dropdown item">
       acidburn <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item" href="#">Open Submissions</a>
-          <a class="item" href="#">Edit History</a>
+          <a class="item" href="/editgroup/current">Open Submissions</a>
+          <a class="item" href="/editor/admin/changelog">Edit History</a>
           <div class="divider"></div>
-          <a class="item" href="#">Account</a>
+          <a class="item" href="/editor/admin">Account</a>
           <a class="item" href="/logout">Logout</a>
         </div>
       </div>
