--- a/fatcat/templates/home.html
+++ b/fatcat/templates/home.html
@@ -9,7 +9,7 @@ Just mockups for now...
   <li><b>Work:</b>
     <a href="/work/create">Create</a>,
     <a href="/work/random">Random</a>
-  <li><b><strike>Release:</strike></b>
+  <li><b>Release:</b>
     <a href="/release/create">Create</a>,
     <a href="/release/random">Random</a>
   <li><b><strike>File:</strike></b>
@@ -21,9 +21,6 @@ Just mockups for now...
   <li><b><strike>Container:</strike></b>
     <a href="/container/create">Create</a>,
     <a href="/container/random">Random</a>
-  <li><b><strike>Publisher:</strike></b>
-    <a href="/publisher/create">Create</a>,
-    <a href="/publisher/random">Random</a>
   <li>Edit groups...
   <li>Changelog...
   <li>Login/Signup...
