basic container creation via form

--- a/fatcat/templates/container_view.html
+++ b/fatcat/templates/container_view.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>Container: {{ container.id }}</h1>
+<h1>Container: {{ container.name }}</h1>
 
-TODO:
+<p>ID: {{ container.id }}
+<p>ISSN: {{ container.issn }}
+<p>Publisher: {{ container.publisher }}
+
+<p>TODO:
 
 <pre>{{ container }}</pre>
 
