update webface copy

--- a/python/fatcat/templates/about.html
+++ b/python/fatcat/templates/about.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>About fatcat!</h1>
+<h1>fatcat Design Document (RFC)</h1>
+
+<p><i>Version: April 2018</i>
 
 <p>fatcat is a half-baked idea to build an open, independent, collaboratively editable bibliographic database of most written works, with a focus on published research outputs like journal articles, pre-prints, and conference proceedings.</p>
 <h2 id="technical-architecture">Technical Architecture</h2>
