--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -32,12 +32,12 @@
         </div>
       </div>
       <div class="ui simple dropdown item">
-      acidburn <i class="dropdown icon"></i>
+      demo-user <i class="dropdown icon"></i>
         <div class="menu">
           <a class="item" href="/editgroup/current">Open Submissions</a>
-          <a class="item" href="/editor/admin/changelog">Edit History</a>
+          <a class="item" href="/editor/demo-user/changelog">Edit History</a>
           <div class="divider"></div>
-          <a class="item" href="/editor/admin">Account</a>
+          <a class="item" href="/editor/demo-user">Account</a>
           <a class="item" href="/logout">Logout</a>
         </div>
       </div>
