--- a/python/fatcat/templates/home.html
+++ b/python/fatcat/templates/home.html
@@ -16,19 +16,24 @@ indexing (aka, linking together of pre-prints and final copies).
 <table>
 <tr><td><b>Container</b>
     <td><a href="/container/create">Create</a>
-    <td><a href="/container/00000000-0000-0000-1111-000000000002">Example</a>
+    <td>Example <a href="/container/00000000-0000-0000-1111-000000000002">Fake</a>
+    <a href="/container/00000000-0000-0000-1111-000000000003">Real</a>
 <tr><td><b>Creator</b>
     <td><a href="/creator/create">Create</a>
-    <td><a href="/creator/00000000-0000-0000-2222-000000000002">Example</a>
+    <td>Example <a href="/creator/00000000-0000-0000-2222-000000000002">Fake</a>
+    <a href="/creator/00000000-0000-0000-2222-000000000003">Real</a>
 <tr><td><b>File</b>
     <td><a href="/file/create">Create</a>
-    <td><a href="/file/00000000-0000-0000-3333-000000000002">Example</a>
+    <td>Example <a href="/file/00000000-0000-0000-3333-000000000002">Fake</a>
+    <a href="/file/00000000-0000-0000-3333-000000000003">Real</a>
 <tr><td><b>Release</b>
     <td><a href="/release/create">Create</a>
-    <td><a href="/release/00000000-0000-0000-4444-000000000002">Example</a>
+    <td>Example <a href="/release/00000000-0000-0000-4444-000000000002">Fake</a>
+    <a href="/release/00000000-0000-0000-4444-000000000003">Real</a>
 <tr><td><b>Work</b>
     <td><a href="/work/create">Create</a>
-    <td><a href="/work/00000000-0000-0000-5555-000000000002">Example</a>
+    <td>Example <a href="/work/00000000-0000-0000-5555-000000000002">Fake</a>
+    <a href="/work/00000000-0000-0000-5555-000000000003">Real</a>
 </table>
 
 {% endblock %}
