--- a/python/fatcat/templates/work_view.html
+++ b/python/fatcat/templates/work_view.html
@@ -1,37 +1,33 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>{{ work.title }}</h1>
+<h1>Work {{ work.ident }}</h1>
 
-<p>Work type: {{ work.type }}
-<p><a href="/work/{{ work.id }}/history">History</a>
-<p>Contributors:
-{% for c in work.contributors %} {{ c.name }}; {% endfor %}
-
-{% if primary %}
-<h2>Primary Release/Edition</h2>
-<p>Title: {{ primary.title }}
-<p>Date: {{ primary.date }}
-
-{% if primary.container %}
-<p>Container: <a href="/container/{{ primary.container.id }}">{{ primary.container.title }}</a>
+<p><b>fatcat Work Identifier:</b> <code>{{ work.ident }}</code> (revision #{{ work.revision }}, {{ work.state }})
+{% if work.extra != None %}
+<p><b>Additional Metadata (raw JSON):</b>
+<pre>{{ work.extra }}</pre>
 {% endif %}
 
-{% if primary.doi %}
-<p>DOI: <a href="https://dx.doi.org/{{ primary.doi }}">{{ primary.doi }}</a>
-{% endif %}
+<!--
+Raw JSON Object:
+{{ work }}
+-->
 
-{% else %}
-<p>No primary release
-{% endif %}
+<p>A "work" is just a linking identifier between a set of releases. For
+example, a pre-print and a published article may contain small differences, but
+still reference the same underlying "work".
+
+<br>
 
 {% if releases %}
 <ul>
 {% for r in releases %}
-  <ul><a href="/release/{{ r.id }}">{{ r.title }}</a> ({{ y.date }} - {{ y.release_type }})
+  <ul><a href="/release/{{ r.ident }}">{{ r.title }}</a> ({{ y.release_type }} - {{ y.date }})
 {% endfor %}
 </ul>
 {% else %}
+<p>There are no known releases associated with this work.
 {% endif %}
 
 {% endblock %}
