copy some of paper-search over

--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -26,10 +26,12 @@
     <a href="#" class="item">Guide</a>
     <div class="right menu">
       <div class="item">
-        <div class="ui transparent inverted icon input">
-          <i class="search icon"></i>
-          <input type="text" placeholder="Search...">
-        </div>
+        <form class="" role="search" action="/release/search" method="get">
+          <div class="ui transparent inverted icon input">
+            <i class="search icon"></i>
+            <input type="text" placeholder="Search..." name="q">
+          </div>
+        </form>
       </div>
       <div class="ui simple dropdown item">
       demo-user <i class="dropdown icon"></i>
